// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`command-line checker reports a compact empty module 1`] = `
"test/fixtures/compact-empty-module.qnt:1:16: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports a missing module brace at end of file 1`] = `
"test/fixtures/missing-module-brace.qnt:2:1: error[parse/missing-token]: expected '}'
  |
2 |
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing after the module keyword 1`] = `
"test/fixtures/module-keyword-spacing.qnt:1:7: error[format/module-keyword-spacing]: expected one space after 'module'
  |
1 | module   Example {
  |       ^^^
  |
"
`;

exports[`command-line checker reports missing spacing before the module brace 1`] = `
"test/fixtures/module-brace-spacing.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
"
`;

exports[`command-line checker reports an excess final newline 1`] = `
"extra-final-newline.qnt:3:1: error[format/final-newline]: expected exactly one final newline
  |
3 |
  | ^
  |
"
`;

exports[`command-line checker reports an unindented module declaration 1`] = `
"test/fixtures/variable-indentation.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | var n: int
  | ^
  |
"
`;

exports[`command-line checker reports missing spacing after a type colon 1`] = `
"test/fixtures/type-colon-spacing.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   var n:int
  |         ^
  |
"
`;

exports[`command-line checker reports whitespace before a type colon 1`] = `
"test/fixtures/before-type-colon.qnt:2:8: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   var n : int
  |        ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing after var 1`] = `
"test/fixtures/variable-keyword-spacing.qnt:2:6: error[format/declaration-keyword-spacing]: expected one space after 'var'
  |
2 |   var   n: int
  |      ^^^
  |
"
`;

exports[`command-line checker reports an unindented constant declaration 1`] = `
"test/fixtures/constant-declaration.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N: int
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical Set-type formatting 1`] = `
"test/fixtures/set-type.qnt:2:16: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const Values:Set[ int ]
  |                ^
  |
test/fixtures/set-type.qnt:2:20: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   const Values:Set[ int ]
  |                    ^
  |
test/fixtures/set-type.qnt:2:24: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   const Values:Set[ int ]
  |                        ^
  |
"
`;

exports[`command-line checker reports adjacent declarations on the same line 1`] = `
"test/fixtures/declaration-line-break.qnt:2:15: error[format/declaration-line-break]: expected each declaration on a separate line
  |
2 |   var a: int  var b: int
  |               ^^^
  |
"
`;

exports[`command-line checker reports an unindented assumption 1`] = `
"test/fixtures/assumption-declaration.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | assume Safe = true
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing around assumption equals 1`] = `
"test/fixtures/assumption-equals-spacing.qnt:2:14: error[format/equals-spacing]: expected one space around '='
  |
2 |   assume Safe=true
  |              ^
  |
"
`;

exports[`command-line checker reports an unindented integer value definition 1`] = `
"test/fixtures/value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val answer = 42
  | ^
  |
"
`;

exports[`command-line checker reports an optional value semicolon 1`] = `
"test/fixtures/value-semicolon.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   val answer=42;
  |             ^
  |
test/fixtures/value-semicolon.qnt:2:16: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
2 |   val answer=42;
  |                ^
  |
"
`;

exports[`command-line checker reports an unindented Boolean value definition 1`] = `
"test/fixtures/boolean-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val ready = true
  | ^
  |
"
`;

exports[`command-line checker reports an unindented string value definition 1`] = `
"test/fixtures/string-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val greeting = "hello"
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical typed value formatting 1`] = `
"test/fixtures/typed-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val answer:int=42
  | ^
  |
test/fixtures/typed-value-definition.qnt:2:12: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | val answer:int=42
  |            ^
  |
test/fixtures/typed-value-definition.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 | val answer:int=42
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical addition formatting 1`] = `
"test/fixtures/addition-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val total=1+2
  | ^
  |
test/fixtures/addition-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val total=1+2
  |          ^
  |
test/fixtures/addition-expression.qnt:2:12: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 | val total=1+2
  |            ^
  |
"
`;

exports[`command-line checker reports noncanonical identifier value formatting 1`] = `
"test/fixtures/identifier-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const source: int
  | ^
  |
test/fixtures/identifier-value-definition.qnt:3:1: error[format/definition-spacing]: expected one blank line between definitions
  |
3 | val copy=source
  | ^^^
  |
test/fixtures/identifier-value-definition.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val copy=source
  | ^
  |
test/fixtures/identifier-value-definition.qnt:3:9: error[format/equals-spacing]: expected one space around '='
  |
3 | val copy=source
  |         ^
  |
"
`;

exports[`command-line checker reports noncanonical parenthesized expression formatting 1`] = `
"test/fixtures/parenthesized-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val total=(1+2)
  | ^
  |
test/fixtures/parenthesized-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val total=(1+2)
  |          ^
  |
test/fixtures/parenthesized-expression.qnt:2:13: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 | val total=(1+2)
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical subtraction formatting 1`] = `
"test/fixtures/subtraction-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val delta=3-1
  | ^
  |
test/fixtures/subtraction-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val delta=3-1
  |          ^
  |
test/fixtures/subtraction-expression.qnt:2:12: error[format/binary-operator-spacing]: expected one space around '-'
  |
2 | val delta=3-1
  |            ^
  |
"
`;

exports[`command-line checker reports a compact module after a hashbang 1`] = `
"test/fixtures/hashbang.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports noncanonical multiple-module layout 1`] = `
"test/fixtures/multiple-modules.qnt:1:14: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |              ^^
  |
test/fixtures/multiple-modules.qnt:1:17: error[format/module-separation]: expected one blank line between modules
  |
1 | module First {} module Second {}
  |                 ^^^^^^
  |
test/fixtures/multiple-modules.qnt:1:31: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |                               ^^
  |
"
`;

exports[`command-line checker reports adjacent definitions without a blank line 1`] = `
"test/fixtures/definition-spacing.qnt:3:3: error[format/definition-spacing]: expected one blank line between definitions
  |
3 |   var second: int
  |   ^^^
  |
"
`;

exports[`command-line checker reports noncanonical leading line-comment formatting 1`] = `
"test/fixtures/leading-line-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // The answer
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical documentation-comment formatting 1`] = `
"test/fixtures/documentation-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /// The answer
  | ^
  |
test/fixtures/documentation-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/documentation-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical block-comment formatting 1`] = `
"test/fixtures/block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /* The answer */
  | ^
  |
test/fixtures/block-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/block-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical multiline block-comment formatting 1`] = `
"test/fixtures/multiline-block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /*
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | val answer=42
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:11: error[format/equals-spacing]: expected one space around '='
  |
5 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical module documentation-comment formatting 1`] = `
"test/fixtures/module-documentation-comment.qnt:1:1: error[format/comment-indentation]: expected no indentation at the source level
  |
1 |  /// Module documentation
  | ^
  |
test/fixtures/module-documentation-comment.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports noncanonical trailing line-comment formatting 1`] = `
"test/fixtures/trailing-line-comment.qnt:2:18: error[format/comment-spacing]: expected one space before a trailing comment
  |
2 |   val answer = 42// The answer
  |                  ^^
  |
"
`;

exports[`command-line checker reports a misindented comment-only module 1`] = `
"test/fixtures/comment-only-module.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // Intentionally empty
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical inline-comment formatting 1`] = `
"test/fixtures/inline-comment.qnt:2:16: error[format/comment-spacing]: expected one space before an inline comment
  |
2 |   val total = 1/* left */+2
  |                ^^
  |
test/fixtures/inline-comment.qnt:2:26: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 |   val total = 1/* left */+2
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical general assumption formatting 1`] = `
"test/fixtures/assumption-expression.qnt:4:15: error[format/equals-spacing]: expected one space around '='
  |
4 |   assume Holds=Flag
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical parameterless def formatting 1`] = `
"test/fixtures/def-definition.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical def-parameter formatting 1`] = `
"test/fixtures/def-parameter.qnt:2:16: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |   def identity( value )=value
  |                ^
  |
test/fixtures/def-parameter.qnt:2:22: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |   def identity( value )=value
  |                      ^
  |
test/fixtures/def-parameter.qnt:2:24: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity( value )=value
  |                        ^
  |
"
`;

exports[`command-line checker reports noncanonical multiple-def-parameter formatting 1`] = `
"test/fixtures/multiple-def-parameters.qnt:2:19: error[format/parameter-separator-spacing]: expected ', ' between parameters
  |
2 |   def choose(left ,right)=left
  |                   ^
  |
test/fixtures/multiple-def-parameters.qnt:2:26: error[format/equals-spacing]: expected one space around '='
  |
2 |   def choose(left ,right)=left
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical typed-def-header formatting 1`] = `
"test/fixtures/typed-def-header.qnt:2:21: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                     ^
  |
test/fixtures/typed-def-header.qnt:2:23: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                       ^
  |
test/fixtures/typed-def-header.qnt:2:27: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                           ^
  |
test/fixtures/typed-def-header.qnt:2:29: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                             ^
  |
test/fixtures/typed-def-header.qnt:2:32: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity(value :int) :int=value
  |                                ^
  |
"
`;

exports[`command-line checker reports noncanonical List-typed-header formatting 1`] = `
"test/fixtures/list-typed-header.qnt:2:25: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                         ^
  |
test/fixtures/list-typed-header.qnt:2:29: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                             ^
  |
test/fixtures/list-typed-header.qnt:2:39: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                       ^
  |
test/fixtures/list-typed-header.qnt:2:43: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                           ^
  |
"
`;

exports[`command-line checker reports an optional definition semicolon 1`] = `
"test/fixtures/definition-semicolon.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42;
  |             ^
  |
test/fixtures/definition-semicolon.qnt:2:16: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
2 |   def answer=42;
  |                ^
  |
"
`;

exports[`command-line checker reports noncanonical type-alias formatting 1`] = `
"test/fixtures/type-alias.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Count=int
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical uninterpreted-type formatting 1`] = `
"test/fixtures/uninterpreted-type.qnt:2:7: error[format/declaration-keyword-spacing]: expected one space after 'type'
  |
2 |   type   DOMAIN
  |       ^^^
  |
"
`;

exports[`command-line checker reports noncanonical named-type-alias formatting 1`] = `
"test/fixtures/named-type-alias.qnt:4:12: error[format/equals-spacing]: expected one space around '='
  |
4 |   type Copy=DOMAIN
  |            ^
  |
"
`;

exports[`command-line checker reports noncanonical polymorphic-type-alias formatting 1`] = `
"test/fixtures/polymorphic-type-alias.qnt:2:12: error[format/type-parameter-list-spacing]: expected no space after '['
  |
2 |   type Box[ a ]=List[a]
  |            ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:14: error[format/type-parameter-list-spacing]: expected no space before ']'
  |
2 |   type Box[ a ]=List[a]
  |              ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:16: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Box[ a ]=List[a]
  |                ^
  |
"
`;

exports[`command-line checker reports noncanonical type-application formatting 1`] = `
"test/fixtures/type-application.qnt:4:15: error[format/type-colon-spacing]: expected one space after ':'
  |
4 |   const boxes:Box[ int ]
  |               ^
  |
test/fixtures/type-application.qnt:4:19: error[format/type-delimiter-spacing]: expected no space after '['
  |
4 |   const boxes:Box[ int ]
  |                   ^
  |
test/fixtures/type-application.qnt:4:23: error[format/type-delimiter-spacing]: expected no space before ']'
  |
4 |   const boxes:Box[ int ]
  |                       ^
  |
"
`;

exports[`command-line checker reports noncanonical pure-definition formatting 1`] = `
"test/fixtures/pure-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   def answer=42
  |       ^^^
  |
test/fixtures/pure-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   def answer=42
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical pure-value formatting 1`] = `
"test/fixtures/pure-value-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   val answer=42
  |       ^^^
  |
test/fixtures/pure-value-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   val answer=42
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical action formatting 1`] = `
"test/fixtures/action-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   action initialize=true
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical run formatting 1`] = `
"test/fixtures/run-definition.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 |   run scenario=true
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical temporal formatting 1`] = `
"test/fixtures/temporal-definition.qnt:2:21: error[format/equals-spacing]: expected one space around '='
  |
2 |   temporal invariant=true
  |                     ^
  |
"
`;

exports[`command-line checker reports noncanonical nondet formatting 1`] = `
"test/fixtures/nondet-definition.qnt:2:19: error[format/equals-spacing]: expected one space around '='
  |
2 |   nondet selection=true
  |                   ^
  |
"
`;
